--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -68,3 +68,12 @@ input[type="number"] {
 .animate-slideIn {
   animation: slideIn 0.5s ease-in-out;
 }
+
+.custom-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.custom-scrollbar {
+  -ms-overflow-style: none; /* Hide scrollbar in IE and Edge */
+  scrollbar-width: none; /* Hide scrollbar in Firefox */
+}
